Created new json files

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "(976, 10)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "4       NaN  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "       'Improve Paraphrasing '], dtype=object)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
        "[113 rows x 10 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,15 +515,265 @@
     "    return has_meaningful_comment\n",
     "\n",
     "# Apply the filtering function\n",
-    "filtered_df = df[df[columns_to_check].apply(valid_row, axis=1)]\n",
+    "fail_descriptions = df[df[columns_to_check].apply(valid_row, axis=1)]\n",
     "\n",
     "# Display filtered DataFrame\n",
-    "filtered_df"
+    "fail_descriptions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FilePath</th>\n",
+       "      <th>FileName</th>\n",
+       "      <th>FileAttributes</th>\n",
+       "      <th>TechnicalDescription</th>\n",
+       "      <th>L3 - Himanshu: 4-Mar</th>\n",
+       "      <th>L3 Reviewer Comments</th>\n",
+       "      <th>L3 Review Status</th>\n",
+       "      <th>L3 Reviewer</th>\n",
+       "      <th>1st march</th>\n",
+       "      <th>4th march</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>UDPCommercial_NRT</td>\n",
+       "      <td>vwdimcausetype</td>\n",
+       "      <td>CauseType</td>\n",
+       "      <td>Direct mapping to CaseType column in Cases tab...</td>\n",
+       "      <td>Ok</td>\n",
+       "      <td>Ok</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ram</td>\n",
+       "      <td>Updated</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>UDPCommercial_NRT</td>\n",
+       "      <td>vwdimcausetype</td>\n",
+       "      <td>CESBICreatedDateTime</td>\n",
+       "      <td>Timestamp(UTC) at which record is inserted by ...</td>\n",
+       "      <td>Ok</td>\n",
+       "      <td>Ok</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ram</td>\n",
+       "      <td>Updated</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>UDPCommercial_NRT</td>\n",
+       "      <td>vwdimcausetype</td>\n",
+       "      <td>CESBILastUpdatedDateTime</td>\n",
+       "      <td>Timestamp(UTC) at which record is updated by E...</td>\n",
+       "      <td>Ok</td>\n",
+       "      <td>Ok</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ram</td>\n",
+       "      <td>Updated</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>UDPCommercial_NRT</td>\n",
+       "      <td>vwdimicmsrsnapshot</td>\n",
+       "      <td>CreatedDateTime</td>\n",
+       "      <td>Direct mapping to CreateDate column in Inciden...</td>\n",
+       "      <td>Ok</td>\n",
+       "      <td>Ok</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ram</td>\n",
+       "      <td>Updated</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>UDPCommercial_NRT</td>\n",
+       "      <td>vwdimicmsrsnapshot</td>\n",
+       "      <td>ModifiedDateTime</td>\n",
+       "      <td>Direct mapping to ModifiedDate column coming f...</td>\n",
+       "      <td>Ok</td>\n",
+       "      <td>Ok</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ram</td>\n",
+       "      <td>Updated</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>971</th>\n",
+       "      <td>UDPCommercial_NRT</td>\n",
+       "      <td>vwfactsrclosedevents</td>\n",
+       "      <td>TransferReason</td>\n",
+       "      <td>Direct mapping to TransferReason column in Cas...</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Updated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>972</th>\n",
+       "      <td>UDPCommercial_NRT</td>\n",
+       "      <td>vwfactsrclosedevents</td>\n",
+       "      <td>TransferredBy</td>\n",
+       "      <td>Direct mapping to UpdatedBy  column in Cases t...</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Updated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>973</th>\n",
+       "      <td>UDPCommercial_NRT</td>\n",
+       "      <td>vwfactsrclosedevents</td>\n",
+       "      <td>TransferredDateTime</td>\n",
+       "      <td>Direct mapping to EventDateTime column in Case...</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Updated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>974</th>\n",
+       "      <td>UDPCommercial_NRT</td>\n",
+       "      <td>vwfactsrclosedevents</td>\n",
+       "      <td>TransferredFrom</td>\n",
+       "      <td>Direct mapping to TransferredFrom column in Ca...</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Updated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>975</th>\n",
+       "      <td>UDPCommercial_NRT</td>\n",
+       "      <td>vwfactsrclosedevents</td>\n",
+       "      <td>UpdatedByAgent</td>\n",
+       "      <td>Direct mapping to UpdatedBy column in Cases ta...</td>\n",
+       "      <td>ok</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Updated</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>863 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              FilePath              FileName            FileAttributes  \\\n",
+       "7    UDPCommercial_NRT        vwdimcausetype                 CauseType   \n",
+       "9    UDPCommercial_NRT        vwdimcausetype      CESBICreatedDateTime   \n",
+       "10   UDPCommercial_NRT        vwdimcausetype  CESBILastUpdatedDateTime   \n",
+       "11   UDPCommercial_NRT    vwdimicmsrsnapshot           CreatedDateTime   \n",
+       "12   UDPCommercial_NRT    vwdimicmsrsnapshot          ModifiedDateTime   \n",
+       "..                 ...                   ...                       ...   \n",
+       "971  UDPCommercial_NRT  vwfactsrclosedevents            TransferReason   \n",
+       "972  UDPCommercial_NRT  vwfactsrclosedevents             TransferredBy   \n",
+       "973  UDPCommercial_NRT  vwfactsrclosedevents       TransferredDateTime   \n",
+       "974  UDPCommercial_NRT  vwfactsrclosedevents           TransferredFrom   \n",
+       "975  UDPCommercial_NRT  vwfactsrclosedevents            UpdatedByAgent   \n",
+       "\n",
+       "                                  TechnicalDescription L3 - Himanshu: 4-Mar  \\\n",
+       "7    Direct mapping to CaseType column in Cases tab...                   Ok   \n",
+       "9    Timestamp(UTC) at which record is inserted by ...                   Ok   \n",
+       "10   Timestamp(UTC) at which record is updated by E...                   Ok   \n",
+       "11   Direct mapping to CreateDate column in Inciden...                   Ok   \n",
+       "12   Direct mapping to ModifiedDate column coming f...                   Ok   \n",
+       "..                                                 ...                  ...   \n",
+       "971  Direct mapping to TransferReason column in Cas...                   ok   \n",
+       "972  Direct mapping to UpdatedBy  column in Cases t...                   ok   \n",
+       "973  Direct mapping to EventDateTime column in Case...                   ok   \n",
+       "974  Direct mapping to TransferredFrom column in Ca...                   ok   \n",
+       "975  Direct mapping to UpdatedBy column in Cases ta...                   ok   \n",
+       "\n",
+       "    L3 Reviewer Comments L3 Review Status L3 Reviewer 1st march 4th march  \n",
+       "7                     Ok              NaN         Ram   Updated       NaN  \n",
+       "9                     Ok              NaN         Ram   Updated       NaN  \n",
+       "10                    Ok              NaN         Ram   Updated       NaN  \n",
+       "11                    Ok              NaN         Ram   Updated       NaN  \n",
+       "12                    Ok              NaN         Ram   Updated       NaN  \n",
+       "..                   ...              ...         ...       ...       ...  \n",
+       "971                  NaN              NaN         NaN       NaN   Updated  \n",
+       "972                  NaN              NaN         NaN       NaN   Updated  \n",
+       "973                  NaN              NaN         NaN       NaN   Updated  \n",
+       "974                  NaN              NaN         NaN       NaN   Updated  \n",
+       "975                  NaN              NaN         NaN       NaN   Updated  \n",
+       "\n",
+       "[863 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# correct descriptions\n",
+    "# Function to check if a row should be kept\n",
+    "def pass_row(row):\n",
+    "    # Check if at least one column is NOT 'ok' or NaN\n",
+    "    has_meaningful_comment = not any([x != 'Ok' and x != 'ok' and pd.notnull(x) for x in row])\n",
+    "    return has_meaningful_comment\n",
+    "\n",
+    "# Apply the filtering function\n",
+    "pass_descriptions = df[df[columns_to_check].apply(pass_row, axis=1)]\n",
+    "\n",
+    "# Display filtered DataFrame\n",
+    "pass_descriptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -790,41 +1040,41 @@
        "[113 rows x 10 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filtered_df"
+    "fail_descriptions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/58/jr_gdrxd4bn3hwrmrhn8x7mh0000gn/T/ipykernel_91449/883138837.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/58/jr_gdrxd4bn3hwrmrhn8x7mh0000gn/T/ipykernel_50733/1922106112.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  filtered_df['L3 Review Status'] = filtered_df['L3 Review Status'].replace('ref rno - 3', ref_rno_3)\n"
+      "  fail_descriptions['L3 Review Status'] = fail_descriptions['L3 Review Status'].replace('ref rno - 3', ref_rno_3)\n"
      ]
     }
    ],
    "source": [
     "# replace all 'ref rno - 3' with ref_rno_3\n",
-    "filtered_df['L3 Review Status'] = filtered_df['L3 Review Status'].replace('ref rno - 3', ref_rno_3)"
+    "fail_descriptions['L3 Review Status'] = fail_descriptions['L3 Review Status'].replace('ref rno - 3', ref_rno_3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -967,28 +1217,28 @@
        "4       NaN  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filtered_df.head()"
+    "fail_descriptions.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "#output technical description, review columns to json\n",
-    "filtered_df[['TechnicalDescription', 'L3 - Himanshu: 4-Mar', 'L3 Reviewer Comments', 'L3 Review Status']].to_json('data/comments.json', orient='records')"
+    "fail_descriptions[['TechnicalDescription', 'L3 - Himanshu: 4-Mar', 'L3 Reviewer Comments', 'L3 Review Status']].to_json('data/comments.json', orient='records')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
