Created first draft of finetuning dataset

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +22,7 @@
        "(976, 10)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +177,7 @@
        "4       NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +211,7 @@
        "       'Improve Paraphrasing '], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +498,7 @@
        "[113 rows x 10 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +752,7 @@
        "[863 rows x 10 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1041,7 @@
        "[113 rows x 10 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,14 +1052,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/58/jr_gdrxd4bn3hwrmrhn8x7mh0000gn/T/ipykernel_50733/1922106112.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/58/jr_gdrxd4bn3hwrmrhn8x7mh0000gn/T/ipykernel_82072/1922106112.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1074,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1218,7 @@
        "4       NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,15 +1239,356 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read the JSON file\n",
-    "with open('data/comments.json') as f:\n",
-    "    data = json.load(f)\n",
-    "    "
+    "# create new test dataframe with columns \"description\" and \"pass\"\n",
+    "temp_df1 = pd.DataFrame(columns=['description', 'pass', 'reason'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# include all technical descriptions as \"description\" and \"pass\" as 1\n",
+    "temp_df1['description'] = pass_descriptions['TechnicalDescription']\n",
+    "temp_df1['pass'] = 1\n",
+    "temp_df1['reason'] = \"N/A\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(863, 3)"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_df1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>description</th>\n",
+       "      <th>pass</th>\n",
+       "      <th>reason</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>This Attribute has a static value - &lt;3001&gt; upl...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Provide the logic for surrogate key generation...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Direct mapping to ARRType column coming from D...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Is it a static source file? Re-check and phras...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Direct mapping to ServiceName column coming fr...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Is it a static source file? Re-check and phras...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Direct mapping to ServicePackageSKU column com...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Is it a static source file? Re-check and phras...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>This Attribute has a static value (2001,2002,2...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Provide the logic for surrogate key generation...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         description  pass  \\\n",
+       "0  This Attribute has a static value - <3001> upl...     0   \n",
+       "1  Direct mapping to ARRType column coming from D...     0   \n",
+       "2  Direct mapping to ServiceName column coming fr...     0   \n",
+       "3  Direct mapping to ServicePackageSKU column com...     0   \n",
+       "4  This Attribute has a static value (2001,2002,2...     0   \n",
+       "\n",
+       "                                              reason  \n",
+       "0  Provide the logic for surrogate key generation...  \n",
+       "1  Is it a static source file? Re-check and phras...  \n",
+       "2  Is it a static source file? Re-check and phras...  \n",
+       "3  Is it a static source file? Re-check and phras...  \n",
+       "4  Provide the logic for surrogate key generation...  "
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# read in reverse_engineered.json\n",
+    "# Make all ReverseEngineeredDescriptions as \"description\" and \"pass\" as 0\n",
+    "\n",
+    "with open('data/reverse_engineered.json') as f:\n",
+    "    data = json.load(f)\n",
+    "    temp_df2 = pd.DataFrame(data)\n",
+    "\n",
+    "# reformat the columns to match test_df\n",
+    "temp_df2['pass'] = 0\n",
+    "temp_df2 = temp_df2.rename(columns={\"reverse_engineered_description\": \"description\"})\n",
+    "temp_df2['reason'] = temp_df2['comment']\n",
+    "temp_df2 = temp_df2.drop(columns=['comment'])\n",
+    "temp_df2 = temp_df2.drop(columns=['final_description'])\n",
+    "temp_df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(951, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>description</th>\n",
+       "      <th>pass</th>\n",
+       "      <th>reason</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>946</th>\n",
+       "      <td>Derived attribute of datatype int based on Cre...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Logic is not clear, check</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>947</th>\n",
+       "      <td>Surrogate key generated within UDP NRT to iden...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Provide the logic for surrogate key generation...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>948</th>\n",
+       "      <td>Derived by applying decode logic on EventDateT...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Logic update by referring to SRCreatedDateTime...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>949</th>\n",
+       "      <td>Derived by applying decode logic on StateAnnot...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Logic update by referring to SRCreatedDateTime...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>950</th>\n",
+       "      <td>Derived by applying decode logic on IncidentTy...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Write the logic in steps</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           description  pass  \\\n",
+       "946  Derived attribute of datatype int based on Cre...     0   \n",
+       "947  Surrogate key generated within UDP NRT to iden...     0   \n",
+       "948  Derived by applying decode logic on EventDateT...     0   \n",
+       "949  Derived by applying decode logic on StateAnnot...     0   \n",
+       "950  Derived by applying decode logic on IncidentTy...     0   \n",
+       "\n",
+       "                                                reason  \n",
+       "946                          Logic is not clear, check  \n",
+       "947  Provide the logic for surrogate key generation...  \n",
+       "948  Logic update by referring to SRCreatedDateTime...  \n",
+       "949  Logic update by referring to SRCreatedDateTime...  \n",
+       "950                           Write the logic in steps  "
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# combine the two dataframes\n",
+    "desc_df = pd.concat([temp_df1, temp_df2], ignore_index=True)\n",
+    "print(desc_df.shape)\n",
+    "desc_df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pass\n",
+       "1    863\n",
+       "0     88\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "desc_df['pass'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pass\n",
+       "1    776\n",
+       "0     79\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# hold out 10% of the data for testing\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "train_df, test_df = train_test_split(desc_df, test_size=0.1)\n",
+    "\n",
+    "train_df.value_counts(\"pass\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pass\n",
+       "1    87\n",
+       "0     9\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df.value_counts(\"pass\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# format data form OpenAI GPT3.5 fine-tuning in JSONL format\n",
+    "# format: {\"messages\": [{\"role\": \"system\", \"content\": <system prompt>}, {\"role\": \"user\", \"content\": <description>}, {\"role\": \"assistant\", \"content\": <pass or fail> <reason>}]}\n",
+    "system_prompt = \"\"\"You are an AI text quality reviewer tool. Your task is to review technical descriptions for data entities and attributes. Based on the quality of the description, you will output either 'Pass' or 'Fail'.\n",
+    "'Pass' means the description meets the quality standards and provides clear, accurate, and complete information.\n",
+    "'Fail' means the description does not meet the required standards, and you must provide a specific reason for the failure.\n",
+    "Your output format will be: <Pass or Fail>, <N/A or reason for failure>\"\"\"\n",
+    "\n",
+    "with open('data/train.jsonl', 'w') as f:\n",
+    "    for i, row in train_df.iterrows():\n",
+    "        content = {\"messages\": [{\"role\": \"system\", \"content\": system_prompt}, {\"role\": \"user\", \"content\": row['description']}, {\"role\": \"assistant\", \"content\": f\"{\"pass,\" if row['pass'] else \"fail,\"} {row['reason']}\"}]}\n",
+    "        json.dump(content, f)\n",
+    "        f.write('\\n')\n",
+    "\n",
+    "with open('data/test.jsonl', 'w') as f:\n",
+    "    for i, row in test_df.iterrows():\n",
+    "        content = {\"messages\": [{\"role\": \"system\", \"content\": system_prompt}, {\"role\": \"user\", \"content\": row['description']}, {\"role\": \"assistant\", \"content\": f\"{\"pass,\" if row['pass'] else \"fail,\"} {row['reason']}\"}]}\n",
+    "        json.dump(content, f)\n",
+    "        f.write('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
